--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
  <title>Document</title>
 </head>
 <body>
-  <div></div>
-  <script src="js/condition.js"></script>
+  
+  <header>
+    <ul class="navi"></ul>
+  </header>
+
+
+
+
+
+  <script src="js/function.js"></script>
 </body>
 </html>
