--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 <body>
   
   <header>
-    <ul class="navi"></ul>
+    <ul class="navi">
+      <li>Home</li>
+      <li>About</li>
+      <li>Product</li>
+      <li>Contact</li>
+    </ul>
   </header>
 
 
 
 
 
-  <script src="js/function.js"></script>
+  <script src="js/object.js"></script>
 </body>
 </html>
