--- a/index.html
+++ b/index.html
@@ -5,10 +5,52 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Document</title>
+ <style>
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  /* .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    row-gap: 1rem;
+  }
+  .btn{
+    width: 300px;
+    height: 70px;
+    background-color: lightblue;
+    font-size: 1.5rem;
+    outline: none;
+    border: none;
+  } */
+  /* .btn:nth-child(1){
+    margin: 6px;
+  } */
+
+  /* .img-box{
+    width: 600px;
+    height: 300px;
+  }
+  .img-box img{
+    width: 100%;
+  } */
+
+*{margin:0; padding:0; box-sizing: border-box;}
+body{width:100%; height:100vh; background:#E0BBE4; position:fixed; left:0; top:0; display:flex; align-items: center; justify-content: center;}
+.wrapper{width:60%; height:auto; display:flex; flex-direction: column;}
+.btns{width:100%; height:auto; display:flex; column-gap: .25rem;}
+.btn{width:50%; padding:1rem 0; border:0; outline:0; background:#957DAD; color:#fff; border-radius: 0;}
+.img-box{margin-top:.25rem; padding:.25rem; border:1px solid #fff;}
+.img-box img{width:100%;}
+ </style>
 </head>
 <body>
   
-  <header>
+  <!-- <header id="header">
     <ul class="navi">
       <li>Home</li>
       <li>About</li>
@@ -17,10 +59,24 @@
     </ul>
   </header>
 
+  <div id="a"></div>
+  <div id="b"></div>
+  <div id="c"></div> -->
+  <div class="container">
+  <div class="btns">
+    <button class="btn" id="dog">DOG</button>
+    <button class="btn" id="cat">CAT</button>
+  </div>
+  <div class="img-box">
+    <img src="./dog.jpg" alt="">
+  </div>
+</div>
+
+<div class="hollow">
+  
+</div>
 
 
-
-
-  <script src="js/object.js"></script>
+  <script src="js/dom.js"></script>
 </body>
 </html>
