--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
   } */
 
 *{margin:0; padding:0; box-sizing: border-box;}
-body{width:100%; height:3000px; background:transparent; ; display:flex; align-items: center; justify-content: center;}
-/* .wrapper{width:60%; height:auto; display:flex; flex-direction: column;}
+body{width:100%; height:100vh; background:transparent; ; display:flex; align-items: center; justify-content: center; position: fixed; left: 0; top: 0;}
+.wrapper{width:60%; height:auto; display:flex; flex-direction: column;}
 .btns{width:100%; height:auto; display:flex; column-gap: .25rem;}
 .btn{width:50%; padding:1rem 0; border:0; outline:0; background:#957DAD; color:#fff; border-radius: 0;}
 .img-box{margin-top:.25rem; padding:.25rem; border:1px solid #fff;}
-.img-box img{width:100%;} */
+.img-box img{width:100%;}
 
 header{
   position: fixed;
@@ -109,8 +109,8 @@ header{
   </header>
   <!-- <div id="a"></div>
   <div id="b"></div>
-  <div id="c"></div>  -->
-  <!-- <div class="container">
+  <div id="c"></div>   -->
+   <div class="container">
   <div class="btns">
     <button class="btn" id="dog">DOG</button>
     <button class="btn" id="cat">CAT</button>
@@ -119,23 +119,34 @@ header{
     <img src="./dog.jpg" alt="">
   </div>
 </div>
-<div class="hollow">
+<!-- <div class="hollow">
   <button class="click-btn">CLICK</button><br>
   <h1 class="num">0</h1>
 </div> -->
 
-<div class="key-area">
+<!-- <div class="key-area">
   <input type="text" class="input">
   <button type="button" class="key-btn">Press To Enter</button>
-</div>
+</div> -->
 
-<div class="top">
+<!-- <div class="top">
   <span>&#94;</span>
 </div>
-<div class="hover" style="position: fixed; width: 100px; height: 100px; top: 50px; left: 200px; background: red; z-index: 9999;"></div>
+<div class="hover" style="position: fixed; width: 100px; height: 100px; top: 50px; left: 200px; background: red; z-index: 9999;"></div> -->
 
 
 
-  <script src="js/event.js"></script>
+  <!-- <script src="js/event.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  
+  <script>
+    $(function(){
+      $('.btn').on('click', function(){
+        const nm = $(this).attr('id');
+        $('.img-box img').attr('src', '');
+        $('.img-box img').attr('src', `${nm}.jpg`)
+      });
+    });
+  </script>
 </body>
 </html>
