--- a/index.html
+++ b/index.html
@@ -1,105 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
- <style>
-  *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  /* .container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    row-gap: 1rem;
-  }
-  .btn{
-    width: 300px;
-    height: 70px;
-    background-color: lightblue;
-    font-size: 1.5rem;
-    outline: none;
-    border: none;
-  } */
-  /* .btn:nth-child(1){
-    margin: 6px;
-  } */
-
-  /* .img-box{
-    width: 600px;
-    height: 300px;
-  }
-  .img-box img{
-    width: 100%;
-  } */
-
-*{margin:0; padding:0; box-sizing: border-box;}
-body{width:100%; height:3000px; background:transparent; ; display:flex; align-items: center; justify-content: center;}
-/* .wrapper{width:60%; height:auto; display:flex; flex-direction: column;}
-.btns{width:100%; height:auto; display:flex; column-gap: .25rem;}
-.btn{width:50%; padding:1rem 0; border:0; outline:0; background:#957DAD; color:#fff; border-radius: 0;}
-.img-box{margin-top:.25rem; padding:.25rem; border:1px solid #fff;}
-.img-box img{width:100%;} */
-
-header{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  background-color: black;
-  transition: 0.5s;
-  }
-  header.active{
-    background-color: bisque;
-  }
-  header.active ul li{
-    color: black;
-  }
-  .navi{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding-right: 80px;
-    height: 100px;
-    column-gap: 3rem;
-  }
-  .navi li{
-    font-size: 28px;
-    font-weight: 400;
-    color: #fff;
-    list-style: none;
-    transition: 0.5s;
-  }
-  .top{
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    background-color: #000;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-    border-radius: 50%;
-  }
-  .top span{
-    color: #fff;
-    font-size: 40px;
-    font-weight: bold;
-  }
-
- </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   <header id="header" class="active">
+
+  <header id="header" class="">
     <ul class="navi">
       <li>Home</li>
       <li>About</li>
@@ -107,35 +17,44 @@ header{
       <li>Contact</li>
     </ul>
   </header>
+
   <!-- <div id="a"></div>
   <div id="b"></div>
-  <div id="c"></div>  -->
-  <!-- <div class="container">
-  <div class="btns">
-    <button class="btn" id="dog">DOG</button>
-    <button class="btn" id="cat">CAT</button>
+  <div id="c"></div> -->
+  <div class="wrapper">
+    <div class="btns">
+      <button class="btn" id="dog">DOG</button>
+      <button class="btn" id="cat">CAT</button>
+    </div>
+    <div class="img-box">
+      <img src="dog.jpg" alt="">
+    </div>
   </div>
-  <div class="img-box">
-    <img src="./dog.jpg" alt="">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <script>
+    $(function(){
+      $('.btn').on('click', function(){
+        const nm = $(this).attr('id');
+        $(".img-box img").attr('src', '');
+        $(".img-box img").attr('src', `${nm}.jpg`);
+      });
+    });
+  </script>
+
+  <!-- <div class="hollow">
+    <button class="click-btn">CLICK</button><br>
+    <h1 class="num">0</h1>
+  </div> -->
+
+  <!-- <div class="key-area">
+    <input type="text" class="input">
+    <button type="button" class="key-btn">Press To Enter</button>
+  </div> -->
+
+  <!-- <div class="top">
+    <span>&#94;</span>
   </div>
-</div>
-<div class="hollow">
-  <button class="click-btn">CLICK</button><br>
-  <h1 class="num">0</h1>
-</div> -->
-
-<div class="key-area">
-  <input type="text" class="input">
-  <button type="button" class="key-btn">Press To Enter</button>
-</div>
-
-<div class="top">
-  <span>&#94;</span>
-</div>
-<div class="hover" style="position: fixed; width: 100px; height: 100px; top: 50px; left: 200px; background: red; z-index: 9999;"></div>
-
-
-
-  <script src="js/event.js"></script>
+  <div class="hover" style="position:fixed; width:100px; height:100px; top:50px; left:200px; background:red; z-index:9999;"></div> -->
+  <script src="js/fetch.js"></script>
 </body>
 </html>
