--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
-=======
+
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -104,7 +104,7 @@ header{
   }
 
  </style>
->>>>>>> 7a3fd40668286314e749eee7476f240b3def8d9b
+
 </head>
 <body>
 
@@ -129,13 +129,13 @@ header{
     <div class="img-box">
       <img src="dog.jpg" alt="">
     </div>
-=======
-  <div id="c"></div>   -->
+
+  <div id="c"></div>  
    <div class="container">
   <div class="btns">
     <button class="btn" id="dog">DOG</button>
     <button class="btn" id="cat">CAT</button>
->>>>>>> 7a3fd40668286314e749eee7476f240b3def8d9b
+
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <script>
@@ -161,10 +161,10 @@ header{
   <!-- <div class="top">
     <span>&#94;</span>
   </div>
-<<<<<<< HEAD
+
   <div class="hover" style="position:fixed; width:100px; height:100px; top:50px; left:200px; background:red; z-index:9999;"></div> -->
-  <script src="js/fetch.js"></script>
-=======
+  <script src="js/asyncAwait.js"></script>
+
 </div>
 <!-- <div class="hollow">
   <button class="click-btn">CLICK</button><br>
@@ -195,6 +195,6 @@ header{
       });
     });
   </script>
->>>>>>> 7a3fd40668286314e749eee7476f240b3def8d9b
+
 </body>
 </html>
